[UPDATE] Part 1 - Data Preprocessing

--- a/Churn_Modelling.ipynb
+++ b/Churn_Modelling.ipynb
@@ -13,6 +13,82 @@
     "# Install Tensorflow from the website: https://www.tensorflow.org/versions/r0.12/get_started/os_setup.html\n",
     "# pip install --upgrade keras"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 1 - Data Preprocessing\n",
+    "# Importing the libraries\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing the dataset\n",
+    "dataset = pd.read_csv('Churn_Modelling.csv')\n",
+    "X = dataset.iloc[:, 3:13].values\n",
+    "y = dataset.iloc[:, 13].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoding categorical data\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "labelencoder_X_1 = LabelEncoder()\n",
+    "X[:, 1] = labelencoder_X_1.fit_transform(X[:, 1])\n",
+    "\n",
+    "labelencoder_X_2 = LabelEncoder()\n",
+    "X[:, 2] = labelencoder_X_2.fit_transform(X[:, 2])\n",
+    "\n",
+    "onehotencoder = OneHotEncoder(categorical_features = [1])\n",
+    "X = onehotencoder.fit_transform(X).toarray()\n",
+    "# To evoid dummy variable trap\n",
+    "X = X[:, 1: ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting the dataset into thr Training set and Test set\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 0)\n",
+    "\n",
+    "# Feature scaling\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc_X = StandardScaler()\n",
+    "X_train = sc_X.fit_transform(X_train)\n",
+    "X_test = sc_X.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
