--- a/Churn_Modelling.ipynb
+++ b/Churn_Modelling.ipynb
@@ -390,17 +390,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Part 3 - Making the predictions and evaluating the model\n",
+    "# Predict the test set result\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "y_pred = (y_pred > 0.5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.85      0.96      0.91      1595\n",
+      "          1       0.71      0.34      0.46       405\n",
+      "\n",
+      "avg / total       0.82      0.84      0.82      2000\n",
+      "\n",
+      "Metric: Accuracy --> Value: 83.9%\n",
+      "Metric: Precicsion --> Value: 71.28%\n",
+      "Metric: Recall --> Value: 34.32%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Making the Confusion Matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "from sklearn.metrics import classification_report\n",
+    "report = classification_report(y_test, y_pred, target_names=['0', '1'])\n",
+    "print(report)\n",
+    "\n",
+    "# Results\n",
+    "TP, TN, FP, FN = cm[1][1], cm[0][0], cm[0][1], cm[1][0]\n",
+    "results = {}\n",
+    "results['Accuracy'] = (TP+TN)/(TP+TN+FP+FN)\n",
+    "results['Precicsion'] = TP/(TP+FP)\n",
+    "results['Recall'] = TP/(TP+FN)\n",
+    "for n, v in results.items():\n",
+    "    print('Metric: {} --> Value: {}'.format(n, str(round(v, 4)*100)+'%'))"
+   ]
   },
   {
    "cell_type": "code",
